--- a/06-advanced-front-end-projects/tic-tac-toe/css/main.css
+++ b/06-advanced-front-end-projects/tic-tac-toe/css/main.css
@@ -1,5 +1,9 @@
-.hide {
+/* .hide {
    display: none;
+} */
+
+body {
+   font-family: 'Oswald', serif;
 }
 
 .invisible {
@@ -10,9 +14,7 @@ body:not([data-active-player='']) [data-column][data-value] {
    cursor: pointer;
 }
 
-.current-active-player {
-   background: yellow;
-}
+
 
 body[data-active-player='x'] [data-column][data-value='']:hover > div {
    opacity: 0.2;
@@ -38,8 +40,9 @@ body[data-active-player='o'] [data-column][data-value='']:hover > div {
    right: 20px;
    top: 20px;
    bottom: 20px;
-   border: 1em solid black;
+   border: 1em solid rgb(37, 34, 34);
    border-radius: 50%;
+   box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.38), inset 0 4px 7px 0 rgba(0, 0, 0, 0.38);
    
 }
 [data-column][data-value="o"] > div:after {
@@ -59,11 +62,12 @@ body[data-active-player='o'] [data-column][data-value='']:hover > div {
    height: 1.2em;
    left: 10px;
    right: 10px;
-   background: blue;
+   background: rgb(29, 29, 203);
    top: 50%;
    transform: translateY(-50%) rotate(45deg);
    bottom: 20px;
    border-radius: 20%;
+   box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.38), inset 0 4px 7px 0 rgba(0, 0, 0, 0.38);
 }
 
 [data-column][data-value="x"] > div:before, body[data-active-player='x'] [data-column][data-value='']:hover > div:before {
@@ -72,10 +76,11 @@ body[data-active-player='o'] [data-column][data-value='']:hover > div {
    height: 1.2em;
    left: 10px;
    right: 10px;
-   background: blue;
+   background: rgb(29, 29, 203);
    top: 50%;
    transform: translateY(-50%) rotate(-45deg);
    border-radius: 20%;
+   box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.38), inset 0 4px 7px 0 rgba(0, 0, 0, 0.38);
 }
 
 @keyframes x-grow {
@@ -142,12 +147,217 @@ div[data-row] {
    height: 100%;
 }
 
-[data-row]:nth-child(1) { border-bottom: 2px solid black; }
-[data-row]:nth-child(3) { border-top: 2px solid black; }
 
-[data-row] > [data-column]:nth-child(1) { border-right: 2px solid black; }
-[data-row] > [data-column]:nth-child(3) { border-left: 2px solid black; }
 
 
 
 /*#endregion */
+
+
+
+
+/*#region ======== WINNING TILES DISPLAY ======== */
+.winning-tile {
+   animation-duration: 0.7s;
+   animation-name: winning-show;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+   animation-play-state: running;
+   opacity: 1;
+   animation-fill-mode: forwards;
+}
+
+@keyframes winning-show {
+   0% {opacity: 1;}
+   50% {opacity: 0;}
+   100% {opacity: 1;}
+}
+/*#endregion ======================================= */
+
+
+/*#region ======== GENERAL BOARD ======== */
+#board {
+   border-radius: 8%;
+   border: 5px solid rgb(75, 75, 75);
+   background: rgb(241, 241, 241);
+   z-index: 100;
+}
+
+[data-row]:nth-child(1) {
+   border-bottom: 4px solid rgba(0, 0, 0, 0.85); 
+   border-radius: 5%;
+}
+[data-row]:nth-child(3) {
+   border-top: 4px solid rgba(0, 0, 0, 0.85); 
+   border-radius: 5%;
+}
+
+[data-row] > [data-column]:nth-child(1) {
+   border-right: 4px solid rgba(0, 0, 0, 0.85); 
+
+}
+[data-row] > [data-column]:nth-child(3) {
+   border-left: 4px solid rgba(0, 0, 0, 0.85);
+}
+
+[data-row]:nth-child(1) [data-column]:nth-child(1) {
+   border-radius: 0 5% 0 0 ;
+}
+[data-row]:nth-child(1) [data-column]:nth-child(3) {
+   border-radius: 5% 0 0 0 ;
+}
+[data-row]:nth-child(3) [data-column]:nth-child(1) {
+   border-radius: 0 0 5% 0 ;
+}
+[data-row]:nth-child(3) [data-column]:nth-child(3) {
+   border-radius: 0 0 0 5%;
+}
+/*#endregion ======================================= */
+
+
+
+/*#region ========       GENERAL GAME       ======== */
+#game-container {
+   position: relative;
+   width: 500px;
+   height: 500px;
+   margin: 0 auto;
+   margin-top: 100px;
+}
+/*#endregion ======================================= */
+
+
+/*#region ========  SCORE & PLAYER DISPLAY  ======== */
+.display {
+   position: absolute;
+   right: -150px;
+   width: 100px;
+   top: 30px;
+   bottom: 30px;
+   text-align: center;
+   padding-left: 20px;
+   font-family: 'Oswald', serif;
+   text-transform: uppercase;
+}
+
+
+.display > div {
+   height: 47.5%;
+   padding: 10px;
+   border: 2px solid rgb(128, 128, 128);
+   border-radius: 13px;
+}
+.display > div:nth-child(2) {
+   margin-top: 5%;
+}
+.desc-heading {
+   font-size: 1.5em;
+   text-transform: uppercase;
+   margin-bottom: 1em;
+   letter-spacing: 0.06em;
+}
+.display .description, .display .value {
+   display: block;
+   float: left;
+}
+.display .description {
+   width: 40%;
+   text-align: left;
+   color: rgba(45, 45, 45);
+   letter-spacing: 0.04em;
+}
+.display .current-active-player .description {
+   color: rgb(255, 255, 255);
+}
+.display .value {
+   width: 60%;
+   text-transform: uppercase;
+   font-weight: bold;
+}
+.display > div > *:not(.desc-heading) {
+   height: 30px;
+   line-height: 30px;
+   border: 2px solid gray;
+   border-radius: 10px;
+   margin-top: 9px;
+   box-shadow: 0 2px 0 0 rgb(128, 128, 128), 0 2px 5px rgba(0, 0, 0, 0.341);
+   padding: 2px 10px;
+   background: rgba(128, 128, 128, 0.2);
+}
+.display > div > *:not(.desc-heading).current-active-player {
+   background: rgb(75, 75, 75);
+   color: rgb(255, 255, 255);
+}
+
+/*#endregion ======================================= */
+
+/*#region ========       GAME SETTINGS       ======== */
+.game-settings {
+   position: relative;
+   height: 200px;
+   margin-top: 30px;
+   z-index: -1;
+   text-align: center;
+}
+
+.game-settings > div {
+   position: absolute;
+   left: 30px;
+   right: 30px;
+   height: 100%;
+   top: -230px;
+   transition: top 0.4s linear;
+}
+.game-settings > div:not(.hide) {
+   top: 0;
+}
+.game-settings .desc-heading {
+   width: 75%;
+   margin: 0 auto;
+   margin-bottom: 15px;
+
+}
+
+.game-settings button {
+   border: 2px solid rgba(29, 41, 66, 0.57);
+   border: 2px solid rgba(256, 256, 256, 0.17);
+   position: relative;
+   padding: 0.8em 3em;
+   border-radius: 0.8em;
+   cursor: pointer;
+   letter-spacing: 0.1em; 
+   text-transform: uppercase;
+   background: rgb(47, 66, 105);
+   color: white;
+   font-weight: bold;
+   font-family: 'Oswald';
+   transition: background 0.05s linear;
+   box-shadow: 0 10px 0 10px black;
+   box-shadow: 0px 7px 0 0px rgb(29, 41, 66);
+}
+.game-settings button:hover {
+   background: rgb(27, 86, 125);
+}
+.game-settings button:active {
+   background: rgb(107, 106, 145);
+   box-shadow: 0px 2px 0 0px rgb(29, 41, 66);
+   top: 5px;
+}
+
+.reset-choice button {
+   border: 2px solid rgba(256, 256, 256, 0.17);
+   background: rgb(135, 26, 37);
+   box-shadow: 0 10px 0 10px black;
+   box-shadow: 0px 7px 0 0px rgb(95, 0, 0);
+}
+.reset-choice button:hover {
+   background: rgb(155, 46, 57);
+}
+.reset-choice button:active {
+   background: rgb(175, 66, 77);
+   box-shadow: 0px 2px 0 0px rgb(95, 0, 0);
+}
+
+
+
+/*#endregion ======================================= */
