--- a/06-advanced-front-end-projects/tic-tac-toe/css/main.css
+++ b/06-advanced-front-end-projects/tic-tac-toe/css/main.css
@@ -1,7 +1,29 @@
 :root { font-family: 'Oswald', sans-serif; }
 body:not([data-active-player='']) .column[data-value=''] .value-display  { cursor: pointer;}
+noscript {
+   font-size: 2rem;
+   position: fixed;
+   top: 0.5em;
+   left: 0;
+   right: 0;
+   height: 80px;
+   text-align: center;
+}
+.no-js #game-container { display: none; }
+.h1 {
+   text-align: center;
+   font-size: 2rem;
+   font-weight: normal;
+}
+.h2 { font-weight: normal; }
+ul {
+   padding: 0;
+   margin: 0;
+   list-style-type: none;
+}
 
 
+/*#region ======== GENERAL BOARD ======== */
 #game-container {
    position: relative;
    width: 500px;
@@ -9,9 +31,6 @@ body:not([data-active-player='']) .column[data-value=''] .value-display  { curso
    margin: 0 auto;
    margin-top: 100px;
 }
-
-
-/*#region ======== GENERAL BOARD ======== */
 #board {
    height: 100%;
    width: 100%;
@@ -172,13 +191,13 @@ body:not([data-active-player='']) .column[data-value=''] .value-display  { curso
 
 
 /* display containers */
-.display > div {
+.display > ul {
    height: 47.5%;
    padding: 10px;
    border: 2px solid rgb(128, 128, 128);
    border-radius: 13px;
 }
-.display > div:nth-child(2) {
+.display > ul:nth-child(2) {
    margin-top: 5%;
 }
 .desc-heading {
@@ -188,7 +207,7 @@ body:not([data-active-player='']) .column[data-value=''] .value-display  { curso
 }
 
 /* Display items */
-.display > div > *:not(.desc-heading) {
+.display > ul > *:not(.desc-heading) {
    height: 1.8em;
    line-height: 1.8em;
    border: 2px solid gray;
@@ -198,7 +217,7 @@ body:not([data-active-player='']) .column[data-value=''] .value-display  { curso
    padding: 2px 10px;
    background: rgba(128, 128, 128, 0.2);
 }
-.display > div > *:not(.desc-heading).current-active-player {
+.display > ul > *:not(.desc-heading).current-active-player {
    background: rgb(75, 75, 75);
    color: rgb(255, 255, 255);
 }
@@ -311,7 +330,7 @@ body:not([data-active-player='']) .column[data-value=''] .value-display  { curso
       height: 100px;
       width: auto;
    }
-   .display > div {
+   .display > ul {
       box-sizing: border-box;
       bottom: 0;
       width: 47.5%;
@@ -321,13 +340,13 @@ body:not([data-active-player='']) .column[data-value=''] .value-display  { curso
       padding-top: 0;
       padding-bottom: 0;
    }
-   .display > div:nth-child(1) {
+   .display > ul:nth-child(1) {
       left: 0;
    }
-   .display > div:nth-child(2) {
+   .display > ul:nth-child(2) {
       right: 0;
    }
-   .display > div > * {
+   .display > ul > * {
       margin-top: 0;
    }
 }
